tests/fixtures/LatestTests/ObjectTests/errors/custom_type_does_not_exists.fg
/; EXPECT_ERROR: CustomTypeNotFound
type Node = {
    value: int
    next: Node3
}